# flytracker_analysis

./: .gitignore  dlc.py  note.md  playground.ipynb  pyproject.toml  utils.py
src/: calculate_dlc.py  coordinate_transform.py  play2.py  playground.ipynb  project.py  project_dlc.py  video.py
src/calculation/: calculation.py  transform.py
src/dlc/: measurement.py  qc.py  relative_measurement.py  transform.py
src/projector/: speed.py
transform_data/: relative_metrics.py
