[tool.poetry]
name = "flytracker-analysis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "flytracker_analysis"}]

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.14.1"
pandas = "^2.2.3"
h5py = "^3.12.1"
mat73 = "^0.65"
opencv-python = "^4.10.0.84"
ipykernel = "^6.29.5"
black = {extras = ["jupyter"], version = "^24.10.0"}
tables = "^3.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
